# kestrel

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  Makefile  README.md  drizzle.config.ts  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.claude/skills/ax-ai/: SKILL.md
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: bazel-rbe.yml  ci.yml
docs/: publishing.md
evals/: eval-runner.mjs  optimize-prompt-v2.mjs  optimize-prompt.mjs  optimized-prompt-v2.json  optimized-prompt.json
native/contextkit/: Package.swift
resources/: entitlements.mac.plist  icon.icns
scripts/: run-bazel-rbe.sh
sdk/js/: README.md  package.json  tsconfig.examples.json
sdk/js/examples/: node-agent-adopter.ts
sdk/js/src/: index.ts
sdk/rust/kestrel-sdk/: Cargo.toml  README.md
sdk/rust/kestrel-sdk/src/: lib.rs
src/main/: deep-links.ts  index.ts  permissions.ts  platform-notifications.ts  shortcuts.ts  updates.ts
src/main/ai/: context-builder.ts  executor-agent.ts  handlers.ts  llm-gateway.ts  openrouter.ts  presenter-agent.ts
src/main/db/: index.ts  schema.ts
src/main/evalops/: approvals.ts  auth.ts  config.ts  connect.ts  consumer.ts  handlers.ts  memory-sync.ts  prompts.ts  (+3 more)
src/preload/: hummingbird.ts  main.ts
src/shared/: config.ts  ipc.ts
tests/: audio-capture.test.mjs  audio-data-size.test.mjs  context-switching.test.mjs  contextkit-pipeline.test.mjs  coreaudio-tap.test.mjs  meeting-detection.test.mjs
tools/bazel/: kestrel_bazel_contract_test.sh
(+84 files in other folders)
